--- a/apps/web-rewards/index.html
+++ b/apps/web-rewards/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Embeejayz recompensa</title>
+    <title>Recompensas</title>
     <link
       rel="shortcut icon"
       href="https://embee-org.github.io/embee-statics/favicon.ico"
