feat(web-rewards): :mag: add tobots and description indexhtml

--- a/apps/web-rewards/index.html
+++ b/apps/web-rewards/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recompensas</title>
+    <meta
+      name="description"
+      content="Embeejayz recompensas del canal de twitch, basadas en el competitivo de league of legends, en el equipo de esport T1 y en mismo canal de embeejayz"
+    />
+    <meta
+      name="keywords"
+      content="embeejayz, twitch, t1, skt, skt t1, faker, league of legends, lol, marcos, bordes, rank, ranking, clasificatoria"
+    />
+    <meta name="author" content="Gountzjs" />
+    <meta property="og:image" content="/avatar-embee.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Embeejayz redes sociales" />
+    <meta
+      property="og:description"
+      content="Embeejayz recompensas del canal de twitch, basadas en el competitivo de league of legends, en el equipo de esport T1 y en mismo canal de embeejayz"
+    />
+    <meta property="og:url" content="/" />
+    <meta property="og:site_name" content="Embeejayz Rewards" />
     <link
       rel="shortcut icon"
       href="https://embee-org.github.io/embee-statics/favicon.ico"
