feat(web-rewards): :sparkles: meta og-image add url favicon embeejayz

--- a/apps/web-rewards/index.html
+++ b/apps/web-rewards/index.html
@@ -13,7 +13,10 @@
       content="embeejayz, twitch, t1, skt, skt t1, faker, league of legends, lol, marcos, bordes, rank, ranking, clasificatoria"
     />
     <meta name="author" content="Gountzjs" />
-    <meta property="og:image" content="/avatar-embee.jpg" />
+    <meta
+      property="og:image"
+      content="https://embee-org.github.io/embee-statics/favicon.ico"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Embeejayz redes sociales" />
     <meta
