feat(embee-links): :sparkles: add style scrollbar modify avatar and add keywords layout

--- a/apps/web-rewards/index.html
+++ b/apps/web-rewards/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="embeejayz, twitch, t1, skt, skt t1, faker, league of legends, lol, marcos, bordes, rank, ranking, clasificatoria"
+      content="embeejayz, twitch, twitter, patreon, t1, skt, skt t1, lck, worlds, msi, faker, league of legends, lol, x, youtube, patreon, streamlabs, marcos, bordes, rank, ranking, clasificatoria"
     />
     <meta name="author" content="Gountzjs" />
     <meta
